feat: where().property(Xx:Yy).property(Yy::Name).[eq|ne|...] auto join if necessity